src/negative_test_cases/Testcases/no_left_hand_side_for_expression.stl
void main(){

int a ;
int b ;
boolean c = a <  b;
a>b;
a!=b;
a==b;



}
